--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "username-generator",
+  "name": "username-generator-uid",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
